# ui_to_usb_firmware

./: README.md  platformio.ini
py_ui_board/: pyproject.toml
py_ui_board/py_ui_board/: ch32.py  ft232h.py  ui_board.py  ui_demo.py
py_ui_board/util/: README.md  creep.bdf  mcp23.py  ssd1322.py  ui_board.py  ui_board_sim.py  ui_demo.ipynb
src/: main.c  main.h  ssd1322.c  ssd1322.h  tusb_config.h  ui_board.c  ui_board.h  usb_descriptors.c  usb_interface.c  usb_interface.h
